--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -169,9 +169,10 @@ jobs:
           PKGS=""
         fi
         DEBURL="http://deb.debian.org/debian"
-        if [[ "${{ inputs.debian_version }}" == "noble" || "${{ inputs.debian_version }}" == "plucky"]]; then
+        if [[ "${{ inputs.debian_version }}" == "noble" || "${{ inputs.debian_version }}" == "plucky" ]]; then
           DEBURL="http://ports.ubuntu.com/ubuntu-ports"
         fi
+        echo $DEBURL
         if [[ -n "$PKGS" ]]; then
           sudo debootstrap --foreign --arch=arm64 --variant=minbase --include="$PKGS" ${{ inputs.debian_version }} rootfs "$DEBURL"
         else
