--- a/.config
+++ b/.config
@@ -2,6 +2,7 @@ CONFIG_LOCALVERSION="-msm8916"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
+CONFIG_AUDIT=y
 CONFIG_NO_HZ_IDLE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
@@ -82,6 +83,7 @@ CONFIG_SCHED_MC=y
 CONFIG_SCHED_CLUSTER=y
 CONFIG_SCHED_SMT=y
 CONFIG_NR_CPUS=8
+CONFIG_HOTPLUG_CPU=y
 CONFIG_HZ_300=y
 CONFIG_COMPAT=y
 # CONFIG_ARM64_HW_AFDBM is not set
@@ -98,6 +100,7 @@ CONFIG_COMPAT=y
 CONFIG_RANDOMIZE_BASE=y
 # CONFIG_EFI is not set
 # CONFIG_SUSPEND is not set
+CONFIG_PM=y
 CONFIG_HIBERNATION=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_IDLE=y
@@ -266,7 +269,7 @@ CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CAN=m
 CONFIG_CAN_J1939=m
 CONFIG_CAN_ISOTP=m
-CONFIG_BT=m
+CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=y
@@ -276,8 +279,8 @@ CONFIG_BT_HIDP=m
 CONFIG_BT_LEDS=y
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_QCOMSMD=m
-CONFIG_CFG80211=m
-CONFIG_MAC80211=m
+CONFIG_CFG80211=y
+CONFIG_MAC80211=y
 CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=y
 CONFIG_NFC=m
@@ -649,6 +652,7 @@ CONFIG_NTFS3_LZX_XPRESS=y
 CONFIG_NTFS3_FS_POSIX_ACL=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_HUGETLBFS=y
+CONFIG_CONFIGFS_FS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
 CONFIG_SQUASHFS=m
@@ -673,6 +677,7 @@ CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,apparmor,selinux,
 CONFIG_INIT_STACK_NONE=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_ECDH=y
+CONFIG_CRYPTO_BLAKE2B=m
 CONFIG_CRYPTO_DES=m
 CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_CMAC=y
@@ -684,7 +689,9 @@ CONFIG_CRYPTO_USER_API_SKCIPHER=m
 CONFIG_CRYPTO_USER_API_RNG=m
 CONFIG_CRYPTO_USER_API_AEAD=m
 CONFIG_CRYPTO_NHPOLY1305_NEON=m
+CONFIG_CRYPTO_CHACHA20_NEON=m
 CONFIG_CRYPTO_GHASH_ARM64_CE=y
+CONFIG_CRYPTO_POLY1305_NEON=m
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_SHA512_ARM64_CE=y
@@ -699,6 +706,7 @@ CONFIG_CRYPTO_SM4_ARM64_NEON_BLK=m
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCOM_RNG=y
+CONFIG_LIBCRC32C=y
 CONFIG_PKCS8_PRIVATE_KEY_PARSER=m
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=32
