chmod 644 to firmware

--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -200,6 +200,7 @@ jobs:
         sudo chroot rootfs usermod -aG sudo klipper
         sudo rm rootfs/usr/bin/qemu-aarch64-static
         sudo cp -r --update=none $GITHUB_WORKSPACE/workspace/firmware rootfs/usr/lib/
+        sudo chmod -R 644 rootfs/usr/lib/firmware
         sudo mount --bind /proc rootfs/proc 
         sudo mount --bind /dev rootfs/dev 
         sudo mount --bind /dev/pts rootfs/dev/pts 
