--- a/.config
+++ b/.config
@@ -1,5 +1,6 @@
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_BPF_UNPRIV_DEFAULT_OFF is not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PSI=y
 CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
