--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -227,7 +227,7 @@ jobs:
         sudo cp $GITHUB_WORKSPACE/workspace/files/*.rules rootfs/etc/udev/rules.d/
         sudo cp $GITHUB_WORKSPACE/workspace/files/*.sh rootfs/usr/local/bin/
         sudo cp $GITHUB_WORKSPACE/workspace/files/10-uname rootfs/etc/update-motd.d/
-        sudo cp -r --update=none $GITHUB_WORKSPACE/workspace/files/usr rootfs/
+        # sudo cp -r --update=none $GITHUB_WORKSPACE/workspace/files/usr rootfs/
         if [ "$ver" = "trixie" ]; then
           sudo wget -O rootfs/root/wpasupplicant_2.10-12+deb12u3_arm64.deb http://ftp.us.debian.org/debian/pool/main/w/wpa/wpasupplicant_2.10-12+deb12u3_arm64.deb
         fi
@@ -243,8 +243,8 @@ jobs:
         # sudo chroot rootfs /bin/bash -c "dpkg-reconfigure openssh-server"
         sudo chroot rootfs /bin/bash -c "rm -f /etc/resolv.conf"
         sudo chroot rootfs /bin/bash -c "rm -rf /var/lib/apt/lists/*"
-        sudo chroot rootfs /bin/bash -c "chmod +x /usr/bin/adbd /usr/bin/gc /usr/sbin/*.sh"
-        sudo chroot rootfs /bin/bash -c "systemctl daemon-reload && systemctl enable adbd openstick-button-monitor openstick-gc-startup openstick-startup-diagnose"
+        # sudo chroot rootfs /bin/bash -c "chmod +x /usr/bin/adbd /usr/bin/gc /usr/sbin/*.sh"
+        # sudo chroot rootfs /bin/bash -c "systemctl daemon-reload && systemctl enable adbd openstick-button-monitor openstick-gc-startup openstick-startup-diagnose"
         sudo chroot rootfs /bin/bash -c "find /var/log -type f -delete"
         sudo chroot rootfs /bin/bash -c "cat /dev/null > /root/.bash_history"
         export PYTHONPATH=/usr/share/android-tools/mkbootimg
