--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -205,14 +205,14 @@ jobs:
         sudo chmod -R 644 rootfs/usr/lib/firmware
         sudo cp -a --update=none $GITHUB_WORKSPACE/workspace/files/system/* rootfs/etc/systemd/
         sudo cp -a $GITHUB_WORKSPACE/workspace/files/dhcp.conf rootfs/etc/dnsmasq.d/dhcp.conf
-        sudo cp -a $GITHUB_WORKSPACE/workspace/files/rc.local rootfs/etc/rc.local
-        sudo chmod +x rootfs/etc/rc.local
+        # sudo cp -a $GITHUB_WORKSPACE/workspace/files/rc.local rootfs/etc/rc.local
+        # sudo chmod +x rootfs/etc/rc.local
         sudo cp -a $GITHUB_WORKSPACE/workspace/files/msm8916-usb-gadget.sh rootfs/usr/sbin/
         sudo cp -a $GITHUB_WORKSPACE/workspace/files/msm8916-usb-gadget.conf rootfs/etc/
         sudo chmod +x rootfs/usr/sbin/msm8916-usb-gadget.sh
-        sudo cp $GITHUB_WORKSPACE/workspace/files/*.nmconnection rootfs/etc/NetworkManager/system-connections
-        sudo chmod 0600 rootfs/etc/NetworkManager/system-connections/*
-        sudo cp $GITHUB_WORKSPACE/workspace/files/99-custom.conf rootfs/etc/NetworkManager/conf.d/
+        # sudo cp $GITHUB_WORKSPACE/workspace/files/*.nmconnection rootfs/etc/NetworkManager/system-connections
+        # sudo chmod 0600 rootfs/etc/NetworkManager/system-connections/*
+        # sudo cp $GITHUB_WORKSPACE/workspace/files/99-custom.conf rootfs/etc/NetworkManager/conf.d/
         sudo mount --bind /proc rootfs/proc 
         sudo mount --bind /dev rootfs/dev 
         sudo mount --bind /dev/pts rootfs/dev/pts 
@@ -239,6 +239,10 @@ jobs:
           sudo wget -O rootfs/etc/apt/trusted.gpg.d/mobian.gpg https://repo.mobian-project.org/mobian.gpg
           sudo chroot rootfs /bin/bash -c "echo 'deb http://repo.mobian-project.org/ ${{ inputs.debian_version }} main non-free-firmware' > /etc/apt/sources.list.d/mobian.list"
           sudo chroot rootfs /bin/bash -c "apt-get update && apt-get install -qqy --no-install-recommends modemmanager qrtr-tools systemd-timesyncd mobile-broadband-provider-info mobian-tweaks-common"
+        fi
+        if [ "$ver" = "trixie" ]; then
+          sudo rm -f rootfs/etc/profile.d/mobile-tweaks-mali.sh
+          sudo chroot rootfs /bin/bash -c "apt-mark hold mobile-tweaks-common"
         fi
         # sudo chroot rootfs /bin/bash -c "dpkg-reconfigure openssh-server"
         sudo chroot rootfs /bin/bash -c "rm -f /etc/resolv.conf"
