--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -208,16 +208,19 @@ jobs:
         sudo cp -r --update=none $GITHUB_WORKSPACE/workspace/firmware rootfs/usr/lib/
         sudo chmod -R 644 rootfs/usr/lib/firmware
         sudo cp -a --update=none $GITHUB_WORKSPACE/workspace/files/system/* rootfs/etc/systemd/
-        sudo cp -a $GITHUB_WORKSPACE/workspace/files/dhcp.conf rootfs/etc/dnsmasq.d/dhcp.conf
-        sudo cp -a $GITHUB_WORKSPACE/workspace/files/interfaces rootfs/etc/network/interfaces
-        # sudo cp -a $GITHUB_WORKSPACE/workspace/files/rc.local rootfs/etc/rc.local
-        # sudo chmod +x rootfs/etc/rc.local
-        sudo cp -a $GITHUB_WORKSPACE/workspace/files/msm8916-usb-gadget.sh rootfs/usr/sbin/
-        sudo cp -a $GITHUB_WORKSPACE/workspace/files/msm8916-usb-gadget.conf rootfs/etc/
-        sudo chmod +x rootfs/usr/sbin/msm8916-usb-gadget.sh
-        # sudo cp $GITHUB_WORKSPACE/workspace/files/*.nmconnection rootfs/etc/NetworkManager/system-connections
-        # sudo chmod 0600 rootfs/etc/NetworkManager/system-connections/*
-        # sudo cp $GITHUB_WORKSPACE/workspace/files/99-custom.conf rootfs/etc/NetworkManager/conf.d/
+        version="${{ steps.configure.outputs.kernel_ver }}"
+        target_major=6
+        target_minor=6
+        # 去掉 -rc 等后缀，只取前两位
+        clean_version=$(echo "$version" | sed 's/-.*//' )
+        IFS='.' read -r major minor _ <<< "$clean_version"
+        echo "Parsed version: $major.$minor"
+        if (( major > target_major )) || { (( major == target_major )) && (( minor > target_minor )); }; then
+          echo "Kernel version is greater than 6.6, a dnsmasq template needs to be created for AP mode"
+          sudo cp -a $GITHUB_WORKSPACE/workspace/files/dhcp.conf rootfs/etc/dnsmasq.d/dhcp.conf
+        fi
+        sudo cp $GITHUB_WORKSPACE/workspace/files/*.nmconnection rootfs/etc/NetworkManager/system-connections
+        sudo chmod 0600 rootfs/etc/NetworkManager/system-connections/*
         sudo mount --bind /proc rootfs/proc 
         sudo mount --bind /dev rootfs/dev 
         sudo mount --bind /dev/pts rootfs/dev/pts 
