--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -191,7 +191,7 @@ jobs:
         if [ "$ver" = "noble" ] || [ "$ver" = "plucky" ]; then
           PKGS="$PKGS iwd network-manager-iwd"
         else
-          PKGS="$PKGS wpasupplicant"
+          PKGS="$PKGS wpasupplicant network-manager"
         fi
         if [[ -n "$PKGS" ]]; then
           sudo DEBIAN_FRONTEND=noninteractive debootstrap --foreign --arch=arm64 --variant=minbase --components="$DEBSRC" --include="$PKGS" ${{ inputs.debian_version }} rootfs "$DEBURL"
