--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -187,9 +187,11 @@ jobs:
           PKGS="$PKGS bsdextrautils systemd-resolved"
         else
           PKGS="$PKGS bsdmainutils ifupdown isc-dhcp-client isc-dhcp-common netfilter-persistent rmtfs runit-helper util-linux-extra usrmerge"
-        fi
-        if [ "$ver" = "noble" ] || [ "$ver" = "plucky" ]; then
+        fi 
+        if [ "$ver" = "trixie" ]; then
           PKGS="$PKGS iwd network-manager-iwd"
+        elif [ "$ver" = "noble" ]; then
+          PKGS="$PKGS iwd network-manager"
         else
           PKGS="$PKGS wpasupplicant network-manager"
         fi
@@ -249,7 +251,7 @@ jobs:
           sudo rm -f rootfs/etc/profile.d/mobile-tweaks-mali.sh
           sudo chroot rootfs /bin/bash -c "apt-mark hold mobile-tweaks-common"
         fi
-        if [ "$ver" = "noble" ] || [ "$ver" = "plucky" ]; then
+        if [ "$ver" = "noble" ] || [ "$ver" = "trixie" ]; then
           sudo chroot rootfs /bin/bash -c "systemctl enable iwd"
           sudo chroot rootfs /bin/bash -c "echo '[device]' >> /etc/NetworkManager/NetworkManager.conf"
           sudo chroot rootfs /bin/bash -c "echo 'wifi.backend=iwd' >> /etc/NetworkManager/NetworkManager.conf"
