--- a/.config
+++ b/.config
@@ -123,6 +123,7 @@ CONFIG_UEVENT_HELPER=y
 CONFIG_ZRAM=m
 CONFIG_ZRAM_BACKEND_LZ4=y
 CONFIG_ZRAM_BACKEND_ZSTD=y
+CONFIG_ZRAM_BACKEND_LZO=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=m
 CONFIG_DM_THIN_PROVISIONING=m
