--- a/.config
+++ b/.config
@@ -220,7 +220,10 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_BTRFS_FS=y
 CONFIG_BTRFS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS=y
-CONFIG_F2FS_FS_COMPRESSION=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_F2FS_COMPRESSION=y
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_EXFAT_FS=m
 CONFIG_NTFS_FS=m
