add sync to ext4 mount option

--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -144,7 +144,7 @@ jobs:
       run: |
         mkdir -p rootfs 
         mkdir -p img
-        sudo dd if=/dev/zero of=root.img bs=1M count=1536
+        sudo truncate -s 1.5G root.img
         if [ "${{ inputs.rootfs_type }}" = "btrfs" ]; then
           sudo mkfs.btrfs -O free-space-tree --metadata single --data single --label "rootfs" -U a7ab80e8-e9d1-e8cd-f157-93f69b1d141e root.img
           sudo losetup -fP root.img
@@ -152,7 +152,7 @@ jobs:
         else
           sudo mkfs.ext4 -L rootfs -m 0 -O ^has_journal -E lazy_itable_init=0,lazy_journal_init=0 -b 4096 -I 256 root.img
           sudo losetup -fP root.img
-          sudo mount /dev/loop0 img/
+          sudo mount -o sync /dev/loop0 img/
         fi
         echo "status=success" >>$GITHUB_OUTPUT
   
@@ -306,7 +306,7 @@ jobs:
         sudo umount rootfs/dev/pts
         sudo umount rootfs/dev
         sudo umount rootfs/sys
-        sudo cp -ar rootfs/* img
+        sudo rsync -axv rootfs/* img
         if [ "${{ inputs.rootfs_type }}" = "btrfs" ]; then
           sudo chroot img /bin/bash -c "chattr +C /var/cache"
           sudo chroot img /bin/bash -c "chattr +C /var/tmp"
